# Quantara_2026

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  REFACTORING-PLAN-2026.md  REPORT-ANALISI-PROGETTO.md  biome.json  components.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_tariff_voices.sql  0003_materials.sql  0004_indexes.sql  0005_sal_workflow.sql  0006_audit_events.sql  0007_fts_tariff_voices.sql  0008_sal_normalization.sql  0009_migration_checksums.sql  0010_sal_versioning.sql  0011_users_rbac.sql
apps/desktop/src-tauri/resources/parser/: rfi_tariffa_parser.py
apps/desktop/src-tauri/resources/python/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/application/: accounting_service.rs
apps/desktop/src-tauri/src/commands/: accounting.rs  audit.rs  backup.rs  contracts.rs  export.rs  health.rs  materials.rs  mod.rs  release_notes.rs  sals.rs  tariffs.rs  workspace.rs
apps/desktop/src-tauri/src/db/: migrations.rs
apps/desktop/src-tauri/src/domain/: accounting.rs
apps/desktop/src-tauri/src/infrastructure/: audit_repository.rs  contract_repository.rs  encryption.rs  import_draft_storage.rs  local_storage.rs  material_repository.rs  mod.rs  sal_document_repository_v2.rs  sal_repository.rs  tariff_repository.rs  workspace_repository.rs
apps/desktop/src-tauri/src/models/: app_error.rs
apps/desktop/src-tauri/src/updater/: mod.rs  patch_notes.rs  windows_shell.rs
(+389 files in other folders)
