[package]
name = "quantara_desktop"
version = "0.5.0"
description = "Quantara desktop shell"
authors = ["Quantara"]
edition = "2024"
license = "UNLICENSED"

[lib]
name = "quantara_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
thiserror = "2.0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Com", "Win32_UI_Shell"] }
